--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,13 +9,13 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">OpenCart Test Suite</th></tr>
-<tr><td><a href="#t0">OpenCart Tests</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">9,726</td><td></td><td></td></tr>
+<tr><td><a href="#t0">OpenCart Tests</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">78,892</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">OpenCart Test Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">OpenCart Tests &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">testCases.AccountRegistrationTest</td><td><a href="#m0">Verify_Registration_Test</a></td><td rowspan="1">1649062661413</td><td rowspan="1">4297</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">OpenCart Test Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">OpenCart Tests &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">testCases.LoginDataDrivenTest</td><td><a href="#m0">test_LoginDDT</a></td><td rowspan="4">1649093596611</td><td rowspan="4">9589</td></tr><tr class="passedeven"><td><a href="#m1">test_LoginDDT</a></td></tr><tr class="passedeven"><td><a href="#m2">test_LoginDDT</a></td></tr><tr class="passedeven"><td><a href="#m3">test_LoginDDT</a></td></tr></tbody>
 </table>
-<h2>OpenCart Tests</h2><h3 id="m0">testCases.AccountRegistrationTest#Verify_Registration_Test</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [true] but found [false]
-	at testCases.AccountRegistrationTest.Verify_Registration_Test(AccountRegistrationTest.java:60)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 31 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>OpenCart Tests</h2><h3 id="m0">testCases.LoginDataDrivenTest#test_LoginDDT</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>adithautomation@gmail.com</td><td>Tester@12345</td><td>Valid</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">testCases.LoginDataDrivenTest#test_LoginDDT</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>adith@gmail.com</td><td>test@123</td><td>Invalid</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">testCases.LoginDataDrivenTest#test_LoginDDT</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>adithautomation@gmail.com</td><td>Tester@12</td><td>Invalid</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">testCases.LoginDataDrivenTest#test_LoginDDT</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>adithautomation123@gmail.com</td><td>Tester@12345</td><td>Invalid</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
