--- a/test-output/index.html
+++ b/test-output/index.html
@@ -26,7 +26,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button id="button" class="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite, 1 failed test</span>
+      <span class="top-banner-font-1">1 suite</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -40,7 +40,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-OpenCart_Test_Suite" class="navigator-link">
-              <span class="suite-name border-failed">OpenCart Test Suite</span>
+              <span class="suite-name border-passed">OpenCart Test Suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -93,21 +93,36 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method, 1 failed,   </span>
+                    <span class="method-stats">4 methods,   4 passed</span>
                   </li>
                   <li>
-                    <span class="method-list-title failed">Failed methods</span>
-                    <span class="show-or-hide-methods failed">
-                      <a href="#" panel-name="suite-OpenCart_Test_Suite" class="hide-methods failed suite-OpenCart_Test_Suite"> (hide)</a> <!-- hide-methods failed suite-OpenCart_Test_Suite -->
-                      <a href="#" panel-name="suite-OpenCart_Test_Suite" class="show-methods failed suite-OpenCart_Test_Suite"> (show)</a> <!-- show-methods failed suite-OpenCart_Test_Suite -->
+                    <span class="method-list-title passed">Passed methods</span>
+                    <span class="show-or-hide-methods passed">
+                      <a href="#" panel-name="suite-OpenCart_Test_Suite" class="hide-methods passed suite-OpenCart_Test_Suite"> (hide)</a> <!-- hide-methods passed suite-OpenCart_Test_Suite -->
+                      <a href="#" panel-name="suite-OpenCart_Test_Suite" class="show-methods passed suite-OpenCart_Test_Suite"> (show)</a> <!-- show-methods passed suite-OpenCart_Test_Suite -->
                     </span>
-                    <div class="method-list-content failed suite-OpenCart_Test_Suite">
+                    <div class="method-list-content passed suite-OpenCart_Test_Suite">
                       <span>
-                        <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-OpenCart_Test_Suite" title="testCases.AccountRegistrationTest" class="method navigator-link" hash-for-method="Verify_Registration_Test">Verify_Registration_Test</a> <!-- method navigator-link -->
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-OpenCart_Test_Suite" title="testCases.LoginDataDrivenTest" class="method navigator-link" hash-for-method="test_LoginDDT(adithautomation@gmail.com, Tester@12345, Valid)">test_LoginDDT(adithautomation@gmail.com, Tester@12345, Valid)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content failed suite-OpenCart_Test_Suite -->
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-OpenCart_Test_Suite" title="testCases.LoginDataDrivenTest" class="method navigator-link" hash-for-method="test_LoginDDT(adith@gmail.com, test@123, Invalid)">test_LoginDDT(adith@gmail.com, test@123, Invalid)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-OpenCart_Test_Suite" title="testCases.LoginDataDrivenTest" class="method navigator-link" hash-for-method="test_LoginDDT(adithautomation@gmail.com, Tester@12, Invalid)">test_LoginDDT(adithautomation@gmail.com, Tester@12, Invalid)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-OpenCart_Test_Suite" title="testCases.LoginDataDrivenTest" class="method navigator-link" hash-for-method="test_LoginDDT(adithautomation123@gmail.com, Tester@12345, Invalid)">test_LoginDDT(adithautomation123@gmail.com, Tester@12345, Invalid)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                    </div> <!-- method-list-content passed suite-OpenCart_Test_Suite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -119,26 +134,46 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-OpenCart_Test_Suite" class="panel OpenCart_Test_Suite">
-          <div class="suite-OpenCart_Test_Suite-class-failed">
+          <div class="suite-OpenCart_Test_Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
-              <img src="failed.png"/>
-              <span class="class-name">testCases.AccountRegistrationTest</span>
+              <img src="passed.png"/>
+              <span class="class-name">testCases.LoginDataDrivenTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="Verify_Registration_Test">
-                  </a> <!-- Verify_Registration_Test -->
-                  <span class="method-name">Verify_Registration_Test</span>
-                  <div class="stack-trace">java.lang.AssertionError: expected [true] but found [false]
-	at testCases.AccountRegistrationTest.Verify_Registration_Test(AccountRegistrationTest.java:60)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 31 stack frames
-</div> <!-- stack-trace -->
+                  <a name="test_LoginDDT(adithautomation@gmail.com, Tester@12345, Valid)">
+                  </a> <!-- test_LoginDDT(adithautomation@gmail.com, Tester@12345, Valid) -->
+                  <span class="method-name">test_LoginDDT</span>
+                  <span class="parameters">(adithautomation@gmail.com, Tester@12345, Valid)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="test_LoginDDT(adith@gmail.com, test@123, Invalid)">
+                  </a> <!-- test_LoginDDT(adith@gmail.com, test@123, Invalid) -->
+                  <span class="method-name">test_LoginDDT</span>
+                  <span class="parameters">(adith@gmail.com, test@123, Invalid)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="test_LoginDDT(adithautomation@gmail.com, Tester@12, Invalid)">
+                  </a> <!-- test_LoginDDT(adithautomation@gmail.com, Tester@12, Invalid) -->
+                  <span class="method-name">test_LoginDDT</span>
+                  <span class="parameters">(adithautomation@gmail.com, Tester@12, Invalid)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="test_LoginDDT(adithautomation123@gmail.com, Tester@12345, Invalid)">
+                  </a> <!-- test_LoginDDT(adithautomation123@gmail.com, Tester@12345, Invalid) -->
+                  <span class="method-name">test_LoginDDT</span>
+                  <span class="parameters">(adithautomation123@gmail.com, Tester@12345, Invalid)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-OpenCart_Test_Suite-class-failed -->
+          </div> <!-- suite-OpenCart_Test_Suite-class-passed -->
         </div> <!-- panel OpenCart_Test_Suite -->
         <div panel-name="test-xml-OpenCart_Test_Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
@@ -149,10 +184,13 @@
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite name=&quot;OpenCart Test Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
+  &lt;listeners&gt;
+    &lt;listener class-name=&quot;utilities.ExtentReportManager&quot;/&gt;
+  &lt;/listeners&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;OpenCart Tests&quot;&gt;
     &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;testCases.AccountRegistrationTest&quot;/&gt;
+      &lt;class name=&quot;testCases.LoginDataDrivenTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- OpenCart Tests --&gt;
 &lt;/suite&gt; &lt;!-- OpenCart Test Suite --&gt;
@@ -192,16 +230,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(4);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'Verify_Registration_Test')
-data.setCell(0, 2, 'testCases.AccountRegistrationTest')
-data.setCell(0, 3, 4297);
+data.setCell(0, 1, 'test_LoginDDT')
+data.setCell(0, 2, 'testCases.LoginDataDrivenTest')
+data.setCell(0, 3, 21226);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'test_LoginDDT')
+data.setCell(1, 2, 'testCases.LoginDataDrivenTest')
+data.setCell(1, 3, 21146);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'test_LoginDDT')
+data.setCell(2, 2, 'testCases.LoginDataDrivenTest')
+data.setCell(2, 3, 21059);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'test_LoginDDT')
+data.setCell(3, 2, 'testCases.LoginDataDrivenTest')
+data.setCell(3, 3, 9589);
 window.suiteTableData['OpenCart_Test_Suite']= { tableData: data, tableDiv: 'times-div-OpenCart_Test_Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 4 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-OpenCart_Test_Suite">
               </div> <!-- times-div-OpenCart_Test_Suite -->
             </div> <!-- times-div -->
@@ -227,20 +277,30 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">testCases.AccountRegistrationTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">testCases.LoginDataDrivenTest</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setUp(chrome)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <img src="failed.png">
-                </img>
-                <span class="method-name">Verify_Registration_Test</span>
-                <span class="method-start">5266 ms</span>
+                <span class="method-name">test_LoginDDT(adithautomation@gmail.com, Tester@12345, Valid)</span>
+                <span class="method-start">5329 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">test_LoginDDT(adithautomation123@gmail.com, Tester@12345, Invalid)</span>
+                <span class="method-start">14933 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">test_LoginDDT(adithautomation@gmail.com, Tester@12, Invalid)</span>
+                <span class="method-start">36080 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">test_LoginDDT(adith@gmail.com, test@123, Invalid)</span>
+                <span class="method-start">57140 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">9568 ms</span>
+                <span class="method-start">78368 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
