--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="93abcc">  <td>22/04/04 13:45:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:testCases.AccountRegistrationTest@333291e3]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2073621255</td>   <td></td> </tr>
-<tr bgcolor="93abcc">  <td>22/04/04 13:45:18</td>   <td>-9275</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:testCases.AccountRegistrationTest@333291e3]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2073621255</td>   <td></td> </tr>
-<tr bgcolor="b789e6">  <td>22/04/04 13:45:23</td>   <td>-4389</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountRegistrationTest.Verify_Registration_Test()[pri:0, instance:testCases.AccountRegistrationTest@333291e3]">Verify_Registration_Test</td> 
-  <td>main@2073621255</td>   <td></td> </tr>
+<tr bgcolor="b789e6">  <td>22/04/04 23:02:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginDataDrivenTest.test_LoginDDT(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:testCases.LoginDataDrivenTest@4d9e68d0]">test_LoginDDT</td> 
+  <td>main@1985836631</td>   <td></td> </tr>
+<tr bgcolor="b789e6">  <td>22/04/04 23:02:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginDataDrivenTest.test_LoginDDT(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:testCases.LoginDataDrivenTest@4d9e68d0]">test_LoginDDT</td> 
+  <td>main@1985836631</td>   <td></td> </tr>
+<tr bgcolor="b789e6">  <td>22/04/04 23:02:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginDataDrivenTest.test_LoginDDT(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:testCases.LoginDataDrivenTest@4d9e68d0]">test_LoginDDT</td> 
+  <td>main@1985836631</td>   <td></td> </tr>
+<tr bgcolor="93abcc">  <td>22/04/04 23:02:38</td>   <td>21109</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:testCases.LoginDataDrivenTest@4d9e68d0]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1985836631</td>   <td></td> </tr>
+<tr bgcolor="93abcc">  <td>22/04/04 23:01:20</td>   <td>-57153</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:testCases.LoginDataDrivenTest@4d9e68d0]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1985836631</td>   <td></td> </tr>
+<tr bgcolor="b789e6">  <td>22/04/04 23:02:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginDataDrivenTest.test_LoginDDT(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:testCases.LoginDataDrivenTest@4d9e68d0]">test_LoginDDT</td> 
+  <td>main@1985836631</td>   <td></td> </tr>
 </table>
