--- a/test-output/old/OpenCart Test Suite/classes.html
+++ b/test-output/old/OpenCart Test Suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>testCases.AccountRegistrationTest</td>
+<td>testCases.LoginDataDrivenTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>Verify_Registration_Test</td>
+<td>test_LoginDDT</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
