--- a/test-output/old/OpenCart Test Suite/methods.html
+++ b/test-output/old/OpenCart Test Suite/methods.html
@@ -1,16 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>OpenCart Test Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7362d6">  <td>22/04/04 23:03:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String)[pri:0, instance:testCases.LoginDataDrivenTest@15ff3e9e]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1899600175</td>   <td></td> </tr>
-<tr bgcolor="75e7fd">  <td>22/04/04 23:04:08</td>   <td>57135</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginDataDrivenTest.test_LoginDDT(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:testCases.LoginDataDrivenTest@15ff3e9e]">test_LoginDDT</td> 
-  <td>main@1899600175</td>   <td></td> </tr>
-<tr bgcolor="75e7fd">  <td>22/04/04 23:04:08</td>   <td>57135</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginDataDrivenTest.test_LoginDDT(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:testCases.LoginDataDrivenTest@15ff3e9e]">test_LoginDDT</td> 
-  <td>main@1899600175</td>   <td></td> </tr>
-<tr bgcolor="75e7fd">  <td>22/04/04 23:04:08</td>   <td>57135</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginDataDrivenTest.test_LoginDDT(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:testCases.LoginDataDrivenTest@15ff3e9e]">test_LoginDDT</td> 
-  <td>main@1899600175</td>   <td></td> </tr>
-<tr bgcolor="7362d6">  <td>22/04/04 23:04:29</td>   <td>78363</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:testCases.LoginDataDrivenTest@15ff3e9e]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1899600175</td>   <td></td> </tr>
-<tr bgcolor="75e7fd">  <td>22/04/04 23:04:08</td>   <td>57135</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginDataDrivenTest.test_LoginDDT(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:testCases.LoginDataDrivenTest@15ff3e9e]">test_LoginDDT</td> 
-  <td>main@1899600175</td>   <td></td> </tr>
+<tr bgcolor="95b565">  <td>22/04/05 11:04:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.login_test()[pri:0, instance:testCases.LoginTest@4d9e68d0]">login_test</td> 
+  <td>main@548554586</td>   <td></td> </tr>
+<tr bgcolor="c16b87">  <td>22/04/05 11:03:57</td>   <td>-7905</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountRegistrationTest.Verify_Registration_Test()[pri:0, instance:testCases.AccountRegistrationTest@59fd97a8]">Verify_Registration_Test</td> 
+  <td>main@548554586</td>   <td></td> </tr>
+<tr bgcolor="736495">  <td>22/04/05 11:04:01</td>   <td>-3215</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String)[pri:0, instance:testCases.LoginTest@4d9e68d0]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@548554586</td>   <td></td> </tr>
+<tr bgcolor="736495">  <td>22/04/05 11:03:51</td>   <td>-13977</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String)[pri:0, instance:testCases.AccountRegistrationTest@59fd97a8]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@548554586</td>   <td></td> </tr>
 </table>
