--- a/test-output/index.html
+++ b/test-output/index.html
@@ -26,7 +26,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button id="button" class="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite</span>
+      <span class="top-banner-font-1">1 suite, 1 failed test</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -40,7 +40,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-OpenCart_Test_Suite" class="navigator-link">
-              <span class="suite-name border-passed">OpenCart Test Suite</span>
+              <span class="suite-name border-failed">OpenCart Test Suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -61,7 +61,7 @@
                 </li>
                 <li>
                   <a href="#" panel-name="group-OpenCart_Test_Suite" class="navigator-link ">
-                    <span>0 groups</span>
+                    <span>3 groups</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods,   4 passed</span>
+                    <span class="method-stats">2 methods, 1 failed,   1 passed</span>
+                  </li>
+                  <li>
+                    <span class="method-list-title failed">Failed methods</span>
+                    <span class="show-or-hide-methods failed">
+                      <a href="#" panel-name="suite-OpenCart_Test_Suite" class="hide-methods failed suite-OpenCart_Test_Suite"> (hide)</a> <!-- hide-methods failed suite-OpenCart_Test_Suite -->
+                      <a href="#" panel-name="suite-OpenCart_Test_Suite" class="show-methods failed suite-OpenCart_Test_Suite"> (show)</a> <!-- show-methods failed suite-OpenCart_Test_Suite -->
+                    </span>
+                    <div class="method-list-content failed suite-OpenCart_Test_Suite">
+                      <span>
+                        <img src="failed.png" width="3%"/>
+                        <a href="#" panel-name="suite-OpenCart_Test_Suite" title="testCases.AccountRegistrationTest" class="method navigator-link" hash-for-method="Verify_Registration_Test">Verify_Registration_Test</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                    </div> <!-- method-list-content failed suite-OpenCart_Test_Suite -->
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,22 +118,7 @@
                     <div class="method-list-content passed suite-OpenCart_Test_Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-OpenCart_Test_Suite" title="testCases.LoginDataDrivenTest" class="method navigator-link" hash-for-method="test_LoginDDT(adithautomation@gmail.com, Tester@12345, Valid)">test_LoginDDT(adithautomation@gmail.com, Tester@12345, Valid)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-OpenCart_Test_Suite" title="testCases.LoginDataDrivenTest" class="method navigator-link" hash-for-method="test_LoginDDT(adith@gmail.com, test@123, Invalid)">test_LoginDDT(adith@gmail.com, test@123, Invalid)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-OpenCart_Test_Suite" title="testCases.LoginDataDrivenTest" class="method navigator-link" hash-for-method="test_LoginDDT(adithautomation@gmail.com, Tester@12, Invalid)">test_LoginDDT(adithautomation@gmail.com, Tester@12, Invalid)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-OpenCart_Test_Suite" title="testCases.LoginDataDrivenTest" class="method navigator-link" hash-for-method="test_LoginDDT(adithautomation123@gmail.com, Tester@12345, Invalid)">test_LoginDDT(adithautomation123@gmail.com, Tester@12345, Invalid)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-OpenCart_Test_Suite" title="testCases.LoginTest" class="method navigator-link" hash-for-method="login_test">login_test</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-OpenCart_Test_Suite -->
@@ -134,42 +133,37 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-OpenCart_Test_Suite" class="panel OpenCart_Test_Suite">
-          <div class="suite-OpenCart_Test_Suite-class-passed">
+          <div class="suite-OpenCart_Test_Suite-class-failed">
             <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">testCases.LoginDataDrivenTest</span>
+              <img src="failed.png"/>
+              <span class="class-name">testCases.AccountRegistrationTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="test_LoginDDT(adithautomation@gmail.com, Tester@12345, Valid)">
-                  </a> <!-- test_LoginDDT(adithautomation@gmail.com, Tester@12345, Valid) -->
-                  <span class="method-name">test_LoginDDT</span>
-                  <span class="parameters">(adithautomation@gmail.com, Tester@12345, Valid)</span>
+                  <a name="Verify_Registration_Test">
+                  </a> <!-- Verify_Registration_Test -->
+                  <span class="method-name">Verify_Registration_Test</span>
+                  <div class="stack-trace">java.lang.AssertionError: expected [true] but found [false]
+	at testCases.AccountRegistrationTest.Verify_Registration_Test(AccountRegistrationTest.java:61)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+... Removed 31 stack frames
+</div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-OpenCart_Test_Suite-class-failed -->
+          <div class="suite-OpenCart_Test_Suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">testCases.LoginTest</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="test_LoginDDT(adith@gmail.com, test@123, Invalid)">
-                  </a> <!-- test_LoginDDT(adith@gmail.com, test@123, Invalid) -->
-                  <span class="method-name">test_LoginDDT</span>
-                  <span class="parameters">(adith@gmail.com, test@123, Invalid)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="test_LoginDDT(adithautomation@gmail.com, Tester@12, Invalid)">
-                  </a> <!-- test_LoginDDT(adithautomation@gmail.com, Tester@12, Invalid) -->
-                  <span class="method-name">test_LoginDDT</span>
-                  <span class="parameters">(adithautomation@gmail.com, Tester@12, Invalid)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="test_LoginDDT(adithautomation123@gmail.com, Tester@12345, Invalid)">
-                  </a> <!-- test_LoginDDT(adithautomation123@gmail.com, Tester@12345, Invalid) -->
-                  <span class="method-name">test_LoginDDT</span>
-                  <span class="parameters">(adithautomation123@gmail.com, Tester@12345, Invalid)</span>
+                  <a name="login_test">
+                  </a> <!-- login_test -->
+                  <span class="method-name">login_test</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -183,16 +177,22 @@
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
-&lt;suite name=&quot;OpenCart Test Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
+&lt;suite name=&quot;OpenCart Test Suite&quot;&gt;
   &lt;listeners&gt;
     &lt;listener class-name=&quot;utilities.ExtentReportManager&quot;/&gt;
   &lt;/listeners&gt;
-  &lt;test thread-count=&quot;5&quot; name=&quot;OpenCart Tests&quot;&gt;
+  &lt;test thread-count=&quot;3&quot; name=&quot;Opencart Tests&quot;&gt;
     &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
+    &lt;groups&gt;
+      &lt;run&gt;
+        &lt;include name=&quot;master&quot;/&gt;
+      &lt;/run&gt;
+    &lt;/groups&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;testCases.LoginDataDrivenTest&quot;/&gt;
+      &lt;class name=&quot;testCases.AccountRegistrationTest&quot;/&gt;
+      &lt;class name=&quot;testCases.LoginTest&quot;/&gt;
     &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- OpenCart Tests --&gt;
+  &lt;/test&gt; &lt;!-- Opencart Tests --&gt;
 &lt;/suite&gt; &lt;!-- OpenCart Test Suite --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -204,7 +204,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">OpenCart Tests (1 class)</span>
+                <span class="test-name">Opencart Tests (2 classes)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -214,6 +214,34 @@
             <span class="header-content">Groups for OpenCart Test Suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="test-group">
+              <span class="test-group-name">master</span>
+              <br/>
+              <div class="method-in-group">
+                <span class="method-in-group-name">Verify_Registration_Test</span>
+                <br/>
+              </div> <!-- method-in-group -->
+              <div class="method-in-group">
+                <span class="method-in-group-name">login_test</span>
+                <br/>
+              </div> <!-- method-in-group -->
+            </div> <!-- test-group -->
+            <div class="test-group">
+              <span class="test-group-name">regression</span>
+              <br/>
+              <div class="method-in-group">
+                <span class="method-in-group-name">Verify_Registration_Test</span>
+                <br/>
+              </div> <!-- method-in-group -->
+            </div> <!-- test-group -->
+            <div class="test-group">
+              <span class="test-group-name">sanity</span>
+              <br/>
+              <div class="method-in-group">
+                <span class="method-in-group-name">login_test</span>
+                <br/>
+              </div> <!-- method-in-group -->
+            </div> <!-- test-group -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="times-OpenCart_Test_Suite" class="panel">
@@ -230,28 +258,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'test_LoginDDT')
-data.setCell(0, 2, 'testCases.LoginDataDrivenTest')
-data.setCell(0, 3, 21226);
+data.setCell(0, 1, 'login_test')
+data.setCell(0, 2, 'testCases.LoginTest')
+data.setCell(0, 3, 6801);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'test_LoginDDT')
-data.setCell(1, 2, 'testCases.LoginDataDrivenTest')
-data.setCell(1, 3, 21146);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'test_LoginDDT')
-data.setCell(2, 2, 'testCases.LoginDataDrivenTest')
-data.setCell(2, 3, 21059);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'test_LoginDDT')
-data.setCell(3, 2, 'testCases.LoginDataDrivenTest')
-data.setCell(3, 3, 9589);
+data.setCell(1, 1, 'Verify_Registration_Test')
+data.setCell(1, 2, 'testCases.AccountRegistrationTest')
+data.setCell(1, 3, 4664);
 window.suiteTableData['OpenCart_Test_Suite']= { tableData: data, tableDiv: 'times-div-OpenCart_Test_Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 11 seconds</span>
               <div id="times-div-OpenCart_Test_Suite">
               </div> <!-- times-div-OpenCart_Test_Suite -->
             </div> <!-- times-div -->
@@ -277,31 +297,28 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">testCases.LoginDataDrivenTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">testCases.AccountRegistrationTest</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setUp(chrome)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">test_LoginDDT(adithautomation@gmail.com, Tester@12345, Valid)</span>
-                <span class="method-start">5329 ms</span>
+                <img src="failed.png">
+                </img>
+                <span class="method-name">Verify_Registration_Test</span>
+                <span class="method-start">6078 ms</span>
               </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">testCases.LoginTest</div> <!-- chronological-class-name -->
+              <div class="configuration-class before">
+                <span class="method-name">setUp(chrome)</span>
+                <span class="method-start">10768 ms</span>
+              </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">test_LoginDDT(adithautomation123@gmail.com, Tester@12345, Invalid)</span>
-                <span class="method-start">14933 ms</span>
+                <span class="method-name">login_test</span>
+                <span class="method-start">13983 ms</span>
               </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">test_LoginDDT(adithautomation@gmail.com, Tester@12, Invalid)</span>
-                <span class="method-start">36080 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">test_LoginDDT(adith@gmail.com, test@123, Invalid)</span>
-                <span class="method-start">57140 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-class after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">78368 ms</span>
-              </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
