--- a/test-output/old/OpenCart Test Suite/classes.html
+++ b/test-output/old/OpenCart Test Suite/classes.html
@@ -4,22 +4,24 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>testCases.LoginDataDrivenTest</td>
+<td>testCases.LoginTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>test_LoginDDT</td>
-<td>&nbsp;</td></tr>
+<td>login_test</td>
+<td>sanity master </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>setUp</td>
-<td>&nbsp;</td></tr>
+<td>regression sanity master </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
@@ -30,7 +32,31 @@
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
+<td>testCases.AccountRegistrationTest</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
 <td>&nbsp;</td>
-<td>tearDown</td>
-<td>&nbsp;</td></tr>
+<td>Verify_Registration_Test</td>
+<td>regression master </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>setUp</td>
+<td>regression sanity master </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
 </table>
