--- a/test-output/old/OpenCart Test Suite/classes.html
+++ b/test-output/old/OpenCart Test Suite/classes.html
@@ -4,15 +4,15 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>testCases.LoginTest</td>
+<td>testCases.TC_001_AccountRegistrationTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>login_test</td>
-<td>sanity master </td>
+<td>test_account_Registration</td>
+<td>Master Regression </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -20,7 +20,7 @@
 <tr>
 <td>&nbsp;</td>
 <td>setUp</td>
-<td>regression sanity master </td>
+<td>Master Sanity Regression </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
@@ -34,17 +34,18 @@
 <tr>
 <td>&nbsp;</td>
 <td>tearDown</td>
-<td>&nbsp;</td></tr>
+<td>Master Sanity Regression </td>
+</tr>
 <tr>
-<td>testCases.AccountRegistrationTest</td>
+<td>testCases.TC_002_LoginTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>Verify_Registration_Test</td>
-<td>regression master </td>
+<td>test_login</td>
+<td>Master Sanity </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -52,7 +53,7 @@
 <tr>
 <td>&nbsp;</td>
 <td>setUp</td>
-<td>regression sanity master </td>
+<td>Master Sanity Regression </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
@@ -66,5 +67,6 @@
 <tr>
 <td>&nbsp;</td>
 <td>tearDown</td>
-<td>&nbsp;</td></tr>
+<td>Master Sanity Regression </td>
+</tr>
 </table>
