--- a/test-output/old/OpenCart Test Suite/groups.html
+++ b/test-output/old/OpenCart Test Suite/groups.html
@@ -1,5 +1,5 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>master</td><td>LoginTest.login_test()[pri:0, instance:testCases.LoginTest@38cee291]<br/>AccountRegistrationTest.Verify_Registration_Test()[pri:0, instance:testCases.AccountRegistrationTest@537f60bf]<br/></td></tr>
-<tr><td>regression</td><td>AccountRegistrationTest.Verify_Registration_Test()[pri:0, instance:testCases.AccountRegistrationTest@537f60bf]<br/></td></tr>
-<tr><td>sanity</td><td>LoginTest.login_test()[pri:0, instance:testCases.LoginTest@38cee291]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Master</td><td>TC_001_AccountRegistrationTest.test_account_Registration()[pri:0, instance:testCases.TC_001_AccountRegistrationTest@449a4f23]<br/>TC_002_LoginTest.test_login()[pri:0, instance:testCases.TC_002_LoginTest@2cf3d63b]<br/></td></tr>
+<tr><td>Regression</td><td>TC_001_AccountRegistrationTest.test_account_Registration()[pri:0, instance:testCases.TC_001_AccountRegistrationTest@449a4f23]<br/></td></tr>
+<tr><td>Sanity</td><td>TC_002_LoginTest.test_login()[pri:0, instance:testCases.TC_002_LoginTest@2cf3d63b]<br/></td></tr>
 </table>
